<resources>
    <string name="app_name" translatable="false"><b>AB InBev</b></string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="chatter_feed_url_suffix" translatable="false">apex/ONTAP__ChatterComponent?id=</string>
    <string name="chatter_newsfeed_url_suffix" translatable="false">apex/ONTAP__ChatterComponent</string>
    <string name="loading">Loading…</string>
    <string name="submit_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="duplicate_button">New from this</string>
    <string name="create_account">Create Account and associate this contact</string>
    <string name="create_account_and_conatct">Create Account and contact</string>
    <string name="no_contacts">You do not have any contacts!</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="phone">Phone</string>
    <string name="localName">Local Name</string>
    <string name="empty_value" translatable="false">-</string>
    <string name="list_header_text">Category</string>
    <string name="content_header_text">Content</string>
    <string name="response_hint">Please enter your response here (up to 255 chars allowed)</string>
    <string name="menu_home">Home</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_checkin">Check In</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_spotlight">Spotlight</string>
    <string name="menu_menu_browser__view">Menu Browser</string>
    <string name="menu_visual_browser_view">Visual Browser</string>
    <string name="menu_history">History</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_add_additional">Add</string>
    <string name="full_order_message">An order cannot have more than seven items.</string>
    <string name="minimum_order_message">An order must have at least one item.</string>
    <string name="add_order_item_item_added">Item added</string>
    <string name="number">name</string>
    <string name="tipo">type</string>
    <string name="description">description</string>
    <string name="startDate">start date</string>
    <string name="endDate">end date</string>
    <string name="obligatory">mandatory</string>
    <string name="result">BDR Feedback</string>
    <string name="related_to">related to</string>
    <string name="value">value</string>
    <string name="last_modified_date">last modified date</string>
    <string name="caso">case</string>
    <string name="first_activity_name" translatable="false"></string>
    <string name="background_image_contentDescription" translatable="false">background image</string>
    <string name="image_contentDescription" translatable="false">image</string>
    <string name="border_image_contentDescription" translatable="false">red border for internal mode</string>
    <string name="menu_delta_sync">Delta Sync</string>
    <string name="menu_clear">Clear Offline Store</string>
    <string name="menu_clear_errors">Clear Errors</string>
    <string name="menu_log_errors">Log Errors</string>
    <string name="menu_purge">Purge Deleted</string>
    <string name="menu_clear_log">Clear Log</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_auto_sync_off">Auto Sync Off</string>
    <string name="show_content">Show Content</string>
    <string name="history_title">History</string>
    <string name="menu_sync_error">Sync Errors</string>
    <string name="select_contact">Select Contact</string>
    <string name="all_contacts">All</string>
    <string name="recent_contacts">Recent</string>
    <string name="choose_at_checkout">Choose at Check Out</string>
    <string name="mail_to_contact">Mail to Contact</string>
    <string name="thumbnail_desc" translatable="false">thumbnail Icon</string>
    <string name="docType_desc" translatable="false">docTypeIcon</string>
    <string name="done_button_title">Done</string>
    <string name="review_materials">Review Materials</string>
    <string name="locating_current_location">Locating current location…</string>
    <string name="search">Search…</string>
    <string name="email_subject">AB InBev – Required documents</string>
    <string name="email_body">Estimado cliente,\n\nAttached you\'ll have the required information.\n\nCordial Saludo.</string>
    <string name="email_type" translatable="false">image/*</string>
    <string name="about_title">About This App</string>
    <string name="create_and_developed">Created and developed by</string>
    <string name="about_desc">Salesforce Services Digital Sales Aid helps organizations efficiently deliver compelling sales presentations while on the go.</string>
    <string name="privacy_note" translatable="false">© Salesforce Services, All Rights Reserved</string>
    <string name="about_icon_desc" translatable="false">AboutSalesforce</string>
    <string name="utilities">Utilities</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_config">Select Configuration</string>
    <string name="synchronization">Synchronize</string>
    <string name="security">Security</string>
    <string name="internal_mode">InternalMode</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="report">Report a Problem</string>
    <string name="html5_demo" translatable="false">HTML5 Demo</string>
    <string name="about">About</string>
    <string name="about_dsa">About DSA</string>
    <string name="internal_mode_alert_msg">The information in this area is for internal personnel and authorized agent use only and may not be shown, printed or distributed (including email) outside of the company or used for sales or promotional purposes</string>
    <string name="caution">Caution</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_playlists">Playlists</string>
    <string name="new_playlist_hint">Shelf name</string>
    <string name="btn_new_playlist">Create playlist</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_edit_playlists">Edit playlists</string>
    <string name="personal_library_header_text">PERSONAL LIBRARY</string>
    <string name="personal_library_italic_text">Permanent Shelf</string>
    <string name="empty_content_item_title_text">NO CONTENT</string>
    <string name="empty_content_item_message_text">Files can be added to your Personal Library in Salesforce by going to the Libraries tab and then Contribute</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="set_playlist">Set Playlist</string>
    <string name="set">Set</string>
    <string name="playlist_name_hint">Playlist Name</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="num_selected">%s selected</string>
    <string name="error_create">"Problem creating "</string>
    <string name="error_delete">"Problem deleting "</string>
    <string name="error_update">"Problem updating "</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_empty_playlist_name">Shelf name cannot be empty</string>
    <string name="edit_playlist_name">Edit Playlist Name</string>
    <string name="filter">Filter</string>
    <string name="dialog_library_copy_title">Copy from Library</string>
    <string name="dialog_library_copy_text">Would you like to copy this content to the playlist?</string>
    <string name="dialog_copy_button">Copy</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_move_title">Edit Playlist</string>
    <string name="dialog_move_text">Would you like to move or copy the item to this playlist?</string>
    <string name="dialog_move_button">Move</string>
    <string name="edit_action_mode_title">Drag content to move or copy. Tap on playlist names to edit.</string>
    <string name="select_action_mode_title">Select content to delete.</string>
    <string name="error_delete_library_items">Library items must be deleted from the web application.</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="date_added">Date Added</string>
    <string name="green_approval">Approval UEN</string>
    <string name="yellow_approval">Approval DRV</string>
    <string name="red_approval">Approval Corporativo</string>
    <string name="supervisor_prompt">Please chose if you want to assign a quiz or do a new one</string>
    <string name="take_quiz">Do the Quizz</string>
    <string name="select_user">Select User</string>
    <string name="assign_quiz">Assign the Quizz to an user</string>
    <string name="take_quiz_user">Do the Quizz to an user</string>
    <string name="quiz_assigned">Quizz: %1$s User assigned: %2$s</string>
    <string name="quizzes">Quizzes</string>
    <string name="visits_dashboard">Visits dashboard</string>
    <string name="itos_result">Last POCE</string>
    <string name="survey_tile_title">Surveys</string>
    <string name="tareas_abiertas">Open tasks</string>
    <string name="casos_abiertas">Cases</string>
    <string name="promociones">Promotions</string>
    <string name="activos_por_cliente">Assets per clients</string>
    <string name="negociaciones_activas">Active negotiations</string>
    <string name="casos">Cases</string>
    <string name="programas_de_mercado">Market programs</string>
    <string name="spr_list">SPR list</string>
    <string name="pbo_contract">PBO Contract</string>
    <string name="contact_admin_instructions">"This tool will allow to report incidents for mobile solution, recompiling device technical information del dispositivo. Please describe details for procedure in execution and the error related."</string>
    <string name="contact_admin_title">SalesForce AB InBev solution</string>
    <string name="contact_admin_subtitle">Report incident</string>
    <string name="asset_add_activity_qr_code">QR Code</string>
    <string name="asset_add_activity_qr_code_button">GET QR CODE</string>
    <string name="asset_add_activity_device_name">ASSET NAME</string>
    <string name="asset_add_activity_input_device_name">please input asset name</string>
    <string name="asset_add_activity_device_category">asset category</string>
    <string name="caso_edit">Edit</string>
    <string name="user_details">User 360</string>
    <string name="lista_de_vistas">Visit List</string>
    <string name="prospectos">Prospects</string>
    <string name="cuentas">PDVs</string>
    <string name="ayuda_ventas_y_capacitaci_n">Sales help and capacitation</string>
    <string name="chatter">Chatter</string>
    <string name="informaci_n_del_sistema">System Information</string>
    <string name="sincronizaci_n">Pending Changes</string>
    <string name="contacts">contacts</string>
    <string name="contact_name_short">NAME</string>
    <string name="function">FUNCTION</string>
    <string name="birthdate">Birthdate</string>
    <string name="telephone">TELEPHONE</string>
    <string name="full_sync">Reset Data</string>
    <string name="abi_logout">Log out</string>
    <string name="event_planning_tile">Events</string>
    <string name="survey_test_activity" translatable="false">Survey Test Activity</string>
    <string name="contact_admin_send">Submit</string>
    <string name="save">Save</string>
    <string name="trade_program_title">Trade program</string>
    <string name="technicians_list_title">D1</string>
    <string name="distribution_list_title">Distribution</string>
    <string name="asset_poc_list_title">Assets</string>
</resources>