<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/DetailsToolbarStyle" />

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/task_edit"
            style="@style/Widget.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space"
            android:text="@string/caso_edit"
            android:visibility="gone" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/save"
            android:padding="@dimen/space"
            android:text="@string/cancel" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator"
        android:background="@color/sab_lightest_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/qr_code_label"
                style="@style/Text.H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                android:text="@string/asset_add_activity_qr_code"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/qr_code_text"
                style="@style/Text.H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qr_code_label"
                android:layout_margin="@dimen/space"
                tools:text="xxs-kf-jll-ca234as" />

            <Button
                android:id="@+id/qr_code_button"
                android:layout_width="@dimen/qr_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:text="@string/asset_add_activity_qr_code_button"
                android:textSize="@dimen/text_h6" />

            <TextView
                android:id="@+id/asset_name"
                style="@style/Text.H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qr_code_text"
                android:layout_margin="@dimen/space"
                android:text="@string/asset_add_activity_device_name"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/asset_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:layout_below="@+id/asset_name"
                android:layout_margin="@dimen/space"
                android:gravity="left"
                android:hint="@string/asset_add_activity_input_device_name" />

            <TextView
                android:id="@+id/asset_category"
                style="@style/Text.H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_name_edit"
                android:layout_margin="@dimen/space"
                android:text="@string/asset_add_activity_device_category" />

            <Spinner
                android:id="@+id/asset_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asset_category"
                android:layout_margin="@dimen/space" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>