<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_logo"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator"
        android:background="@color/sab_lightest_gray"/>

    <TextView
        style="@style/Text.H1.BoldCondensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:layout_marginStart="@dimen/space2"
        android:layout_marginBottom="@dimen/space2"
        android:layout_marginTop="@dimen/space2"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space"
        android:background="@color/sab_lightest_gray">

        <com.abinbev.dsa.ui.view.SortableHeader
            android:id="@+id/contact_name"
            style="@style/Text.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/space"
            android:text="@string/contact_name_short"
            android:textAllCaps="true"/>

        <com.abinbev.dsa.ui.view.SortableHeader
            android:id="@+id/contact_phone"
            style="@style/Text.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/space"
            android:text="@string/telephone"
            android:textAllCaps="true"  />

        <com.abinbev.dsa.ui.view.SortableHeader
            android:id="@+id/contact_function"
            style="@style/Text.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/space"
            android:text="@string/function"
            android:textAllCaps="true"  />

        <com.abinbev.dsa.ui.view.SortableHeader
            android:id="@+id/contact_birthdate"
            style="@style/Text.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/space"
            android:text="@string/birthdate"
            android:textAllCaps="true"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/contacts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/sab_lightest_gray"
            android:dividerHeight="@dimen/separator"/>
    </RelativeLayout>

</LinearLayout>