<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/contact_admin_width"
    android:layout_height="600dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/sab_blue" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:text="@string/contact_admin_title"
                android:textColor="@color/white"
                style="@style/Text.H6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:text="@string/contact_admin_subtitle"
                android:textColor="@color/white"
                style="@style/Text.H5.CondensedBold"/>
        </LinearLayout>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_close_white"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsTextView"
        android:padding="10dp"
        android:text="@string/contact_admin_instructions"
        style="@style/Text.H4"/>
    <EditText
        android:id="@+id/problemDescEditText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/sab_blue"
        android:textColor="@color/white"
        android:text="@string/contact_admin_send" />

</LinearLayout>